defining error object for swagger usage
